--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Responsive Web Design</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -15,7 +16,9 @@
       
   
       <div class="box">
+
           <div class="midbox">
+            <h2>"A people without the knowledge of their past history, origin and culture is like a tree without roots."</h2>
           </div>
 
         <div class="small-box"></div>
