--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+<label for="show-menu" class="show-menu">Show Menu</label>
+  <input type="checkbox" id="show-menu" role="button">
+    <ul id="menu">
+      <li><a href="#">Nature</a></li>
+    <li><a href="#">Sports</a></li>
+    <li><a href="#">Science</a></li>
+    <li><a href="">Technology</a></li>
+  </ul>
+
+
 <main class="content">
 
   <section id="photos" >
