added hover change text on divs

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -31,7 +32,9 @@
             <h2>"A people without the knowledge of their past history, origin and culture is like a tree without roots."</h2>
           </div>
 
-        <div class="small-box"></div>
+        <div class="small-box">
+          <button class="button" type="button" data-hover="the process by which green plants and some other organisms use sunlight to synthesize nutrients from carbon dioxide and water." data-active="I'M ACTIVE"><span>What is Photosynthesis</span></button>
+        </div>
         <div class="small-box"></div>
         <div class="small-box"></div>
         <div class="small-box"></div>
