--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -35,20 +36,52 @@
         <div class="small-box">
           <button class="button" type="button" data-hover="the process by which green plants and some other organisms use sunlight to synthesize nutrients from carbon dioxide and water." data-active="I'M ACTIVE"><span>What is Photosynthesis</span></button>
         </div>
-        <div class="small-box"></div>
-        <div class="small-box"></div>
-        <div class="small-box"></div>
-        <div class="small-box"></div>
-        <div class="small-box"></div>
-        <div class="small-box"></div>
-        <div class="small-box"></div>
+
+        <div class="small-box">
+          <button class="button" type="button" data-hover="71% (Accept between 69% and 73%)" data-active="I'M ACTIVE"><span>Approximately what percentage of the Earth’s surface is water?</span></button>
+        </div>
+ 
+      <div class="small-box">
+          <button class="button" type="button" data-hover="Brazil" data-active="I'M ACTIVE"><span>Who won the football world cup in 1962?</span></button>
+        </div>
+
+      <div class="small-box">
+          <button class="button" type="button" data-hover="George Foreman" data-active="I'M ACTIVE"><span>Who did Muhammad Ali knock out on October 9th 1974</span></button>
+        </div>
+      <div class="small-box">
+          <button class="button" type="button" data-hover="100 billion" data-active="I'M ACTIVE"><span>The average adult brain has how many cells: 1 billion, 10 billion or 100 billion?</span></button>
+        </div>
+
+        <div class="small-box">
+          <button class="button" type="button" data-hover="8 minutes and 20 seconds (accept 8 or 9 minutes)" data-active="I'M ACTIVE"><span>How long does it take on average, in minutes, for light to travel from the Sun’s surface to the Earth?</span></button>
+        </div>
+
+        <div class="small-box">
+          <button class="button" type="button" data-hover="January 24th 1984" data-active="I'M ACTIVE"><span>When was the first Macintosh released</span></button>
+        </div>
+
+        <div class="small-box">
+          <button class="button" type="button" data-hover="Java" data-active="I'M ACTIVE"><span>Which programming language is the servlet closely related to</span></button>
+        </div>
+
 
       </div>
 
 
 
       <aside>
-        <p>This is an aside. Did you know? Facts will go here</p>
+        <p>Fun Facts</p>
+        <ul>
+          <li>Banging your head against a wall burns 150 calories an hour.</li>
+          <li>Hyphephilia are people who get aroused by touching fabrics.</li>
+          <li>The person who invented the Frisbee was cremated and made into frisbees after he died!</li>
+          <li>Cherophobia is the fear of fun.</li>
+          <li>If you lift a kangaroo’s tail off the ground it can’t hop.</li>
+          <li>An eagle can kill a young deer and fly away with it.</li>
+          <li>A hippo’s wide open mouth is big enough to fit a 4 foot tall child in.</li>
+          <li>Chewing gum while you cut an onion will help keep you from crying.</li>
+          <li>Al Capone’s business card said he was a used furniture dealer</li>
+        </ul>
       </aside>
     
   </section>
