finished final touch ups

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Responsive Web Design</title>
+  <title>HTML QUIZ</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
@@ -13,10 +13,10 @@
 <label for="show-menu" class="show-menu">Show Menu</label>
   <input type="checkbox" id="show-menu" role="button">
     <ul id="menu">
-      <li><a href="#">Nature</a></li>
-    <li><a href="#">Sports</a></li>
-    <li><a href="#">Science</a></li>
-    <li><a href="">Technology</a></li>
+      <li><a href="#nature">Nature</a></li>
+    <li><a href="#sports">Sports</a></li>
+    <li><a href="#science">Science</a></li>
+    <li><a href="#technology">Technology</a></li>
   </ul>
 
 
@@ -33,34 +33,34 @@
             <h2>"A people without the knowledge of their past history, origin and culture is like a tree without roots."</h2>
           </div>
 
-        <div class="small-box">
+        <div class="small-box" id="nature">
           <button class="button" type="button" data-hover="the process by which green plants and some other organisms use sunlight to synthesize nutrients from carbon dioxide and water." data-active="I'M ACTIVE"><span>What is Photosynthesis</span></button>
         </div>
 
-        <div class="small-box">
-          <button class="button" type="button" data-hover="71% (Accept between 69% and 73%)" data-active="I'M ACTIVE"><span>Approximately what percentage of the Earth’s surface is water?</span></button>
+        <div class="small-box" id="nature">
+          <button class="button" type="button" data-hover="71% (Accept between 69% and 73%)" data-active="I'M ACTIVE"><span>Approximately what percentage of the Earths surface is water?</span></button>
         </div>
  
-      <div class="small-box">
+      <div class="small-box" id="sports">
           <button class="button" type="button" data-hover="Brazil" data-active="I'M ACTIVE"><span>Who won the football world cup in 1962?</span></button>
         </div>
 
-      <div class="small-box">
+      <div class="small-box" id="sports">
           <button class="button" type="button" data-hover="George Foreman" data-active="I'M ACTIVE"><span>Who did Muhammad Ali knock out on October 9th 1974</span></button>
         </div>
-      <div class="small-box">
+      <div class="small-box" id="science">
           <button class="button" type="button" data-hover="100 billion" data-active="I'M ACTIVE"><span>The average adult brain has how many cells: 1 billion, 10 billion or 100 billion?</span></button>
         </div>
 
-        <div class="small-box">
-          <button class="button" type="button" data-hover="8 minutes and 20 seconds (accept 8 or 9 minutes)" data-active="I'M ACTIVE"><span>How long does it take on average, in minutes, for light to travel from the Sun’s surface to the Earth?</span></button>
+        <div class="small-box" id="science">
+          <button class="button" type="button" data-hover="8 minutes and 20 seconds (accept 8 or 9 minutes)" data-active="I'M ACTIVE"><span>How long does it take on average, in minutes, for light to travel from the Suns surface to the Earth?</span></button>
         </div>
 
-        <div class="small-box">
+        <div class="small-box" id="technology">
           <button class="button" type="button" data-hover="January 24th 1984" data-active="I'M ACTIVE"><span>When was the first Macintosh released</span></button>
         </div>
 
-        <div class="small-box">
+        <div class="small-box" id="technology">
           <button class="button" type="button" data-hover="Java" data-active="I'M ACTIVE"><span>Which programming language is the servlet closely related to</span></button>
         </div>
 
@@ -70,17 +70,25 @@
 
 
       <aside>
+
         <p>Fun Facts</p>
         <ul>
           <li>Banging your head against a wall burns 150 calories an hour.</li>
           <li>Hyphephilia are people who get aroused by touching fabrics.</li>
           <li>The person who invented the Frisbee was cremated and made into frisbees after he died!</li>
           <li>Cherophobia is the fear of fun.</li>
-          <li>If you lift a kangaroo’s tail off the ground it can’t hop.</li>
+          <li>If you lift a kangaroos tail off the ground it cant hop.</li>
           <li>An eagle can kill a young deer and fly away with it.</li>
-          <li>A hippo’s wide open mouth is big enough to fit a 4 foot tall child in.</li>
+          <li>A hippos wide open mouth is big enough to fit a 4 foot tall child in.</li>
           <li>Chewing gum while you cut an onion will help keep you from crying.</li>
-          <li>Al Capone’s business card said he was a used furniture dealer</li>
+          <li>Al Capones business card said he was a used furniture dealer</li>
+          <li>Polar bears can eat as many as 86 penguins in a single sitting. (If they lived in the same place)</li>
+          <li>Bikinis and tampons invented by men.</li>
+          <li>Heart attacks are more likely to happen on a Monday.</li>
+          <li>If you consistently fart for 6 years and 9 months, enough gas is produced to create the energy of an atomic bomb!</li>
+
+
+
         </ul>
       </aside>
     
@@ -90,7 +98,7 @@
 
 
   <footer>
-    <p>This is a footer.</p>
+    <p>&copy; Mohammed Rashid</p>
   </footer>
 
 </body>
